--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,11 +1,11 @@
 {
-  "username": "docker",
-  "password": "ignitedocker",
+  "username": "postgres",
+  "password": "docker",
 
   "type": "postgres",
-  "name": "carsapp",
+  "name": "default",
   "host": "localhost",
-  "port": 5432,
+  "port": 5431,
   "database": "queries_challenge",
   "entities": ["./src/modules/**/entities/*.ts"],
   "migrations": ["./src/database/migrations/*.ts"],
